fix: security err fix, #21